Bs As example on form

--- a/views/query.erb
+++ b/views/query.erb
@@ -45,6 +45,7 @@
     			<input type="text" name="lat" placeholder="Ingrese latitud">
     			<label>Longitud</label>
     			<input type="text" name="long" placeholder="Ingrese longitud">
+    			<span class="help-block">Buenos Aires = [ -34.6036 , -58.3817 ]</span>
     			<label>Time Zone</label>
 				<select name="tmz">
 					<% timezones.each do |timezone| %>
